Get common transaction activities working